--- a/style.css
+++ b/style.css
@@ -69,3 +69,28 @@ html {
         }
     }
 }
+
+#cabecalho {
+    text-align: center;
+    margin-top: 96px;
+
+    h1 {
+        font-size: 48px;
+        font-weight: 600;
+    }
+}
+
+#vermelho {
+    color: var(--vermelho);
+    font-weight: 600;
+    font-size: 16px;
+}
+
+#cinza-claro {
+    color: var(--cinza-claro);
+    width: 792px;
+    text-align: center;
+    margin: 0 auto;
+    justify-content: center;
+    font-size: 20px;
+}
