--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ html {
     p {
         display: inline-block;
         vertical-align: middle;
+        color: var(--cinza-escuro);
+        font-weight: 500;
     }
 
     img {
@@ -68,4 +70,29 @@ html {
             color: white;
         }
     }
+}
+
+#cabecalho {
+    text-align: center;
+    margin-top: 96px;
+
+    h1 {
+        font-size: 48px;
+        font-weight: 600;
+    }
+}
+
+#vermelho {
+    color: var(--vermelho);
+    font-weight: 600;
+    font-size: 16px;
+}
+
+#cinza-claro {
+    color: var(--cinza-claro);
+    width: 792px;
+    text-align: center;
+    margin: 0 auto;
+    justify-content: center;
+    font-size: 20px;
 }
