--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
     --cinza-escuro: #3A404E;
 }
 
-html {
+* {
+    box-sizing: border-box;
     background-color: white;
     font-family: "Inter", sans-serif;
 }
@@ -67,6 +68,7 @@ html {
         border-radius: 10px;
 
         a {
+            background-color: var(--vermelho);
             color: white;
         }
     }
@@ -74,25 +76,68 @@ html {
 
 #cabecalho {
     text-align: center;
-    margin-top: 96px;
+    margin: 96px 0;
 
     h1 {
         font-size: 48px;
         font-weight: 600;
     }
+
+    .vermelho {
+        font-weight: 600;
+        font-size: 16px;
+    }
+
+    .cinza-claro {
+        width: 792px;
+        text-align: center;
+        margin: 0 auto;
+        justify-content: center;
+        font-size: 20px;
+    }
 }
 
-#vermelho {
+.vermelho {
     color: var(--vermelho);
-    font-weight: 600;
-    font-size: 16px;
 }
 
-#cinza-claro {
+.cinza-claro {
     color: var(--cinza-claro);
-    width: 792px;
-    text-align: center;
-    margin: 0 auto;
+}
+
+#metricas {
+    display: flex;
     justify-content: center;
-    font-size: 20px;
+    margin: 0 80px;
+
+    .quad-met {
+        width: 280px;
+        height: 168px;
+        display: inline-block;
+        vertical-align: top;
+        padding-right: 32px;
+    }
+
+    h1 {
+        font-size: 60px;
+        font-weight: 600;
+        margin: 0 auto;
+    }
+
+    .parag-met {
+        font-size: 18px;
+        font-weight: 500;
+        margin: 12px 0 8px 0;
+
+    }
+
+    .cinza-claro {
+        font-size: 16px;
+        margin: 0 auto;
+    }
+
+    #borda-met {
+        padding-right: 0;
+    }
+
 }
