--- a/style.css
+++ b/style.css
@@ -59,18 +59,26 @@
     line-height: 52.8px;
 
     #entrar {
+        width: 83px;
+        height: 44px;
         margin-right: 12px;
+        border-radius: 10px;
+        border: none;
+        color: var(--cinza-claro);
+        font-size: 16px;
+        cursor: pointer;
     }
 
     #cadastrar {
+        width: 112px;
+        height: 44px;
         background-color: var(--vermelho);
         padding: 10px 18px;
         border-radius: 10px;
-
-        a {
-            background-color: var(--vermelho);
-            color: white;
-        }
+        border: none;
+        color: white;
+        font-size: 16px;
+        cursor: pointer;
     }
 }
 
@@ -177,7 +185,7 @@
 #vagas-abertas {
     display: grid;
     justify-content: center;
-
+    margin-bottom: 52px;
 
     h3 {
         font-size: 20px;
@@ -205,5 +213,75 @@
             padding: 0 0 28px 24px;
             margin: 0 auto;
         }
+    }
+}
+
+#depoimentos {
+    text-align: center;
+    width: 1088px;
+    margin: 0 auto;
+    margin-bottom: 96px;
+    background-color: rgba(195, 25, 25, 0.05);
+    border-radius: 16px;
+    padding: 64px;
+
+
+    .vermelho {
+        font-size: 14px;
+        font-weight: bold;
+        background-color: rgba(195, 25, 25, 0.001);
+    }
+
+    h1 {
+        font-size: 36px;
+        background-color: rgba(195, 25, 25, 0.001);
+    }
+
+    #p-dep {
+        font-size: 16px;
+        font-weight: 500;
+        background-color: rgba(195, 25, 25, 0.001);
+    }
+
+    .cinza-claro {
+        background-color: rgba(195, 25, 25, 0.001);
+    }
+}
+
+footer {
+    text-align: center;
+    margin: 96px 0;
+
+    h1 {
+        font-size: 36px;
+        margin-bottom: 20px;
+    }
+
+    .cinza-claro {
+        font-size: 20px;
+        margin-bottom: 40px;
+    }
+
+    #email {
+        width: 360px;
+        height: 48px;
+        border-radius: 10px;
+        border: solid 1px #D0D5DD;
+        margin-bottom: 32px;
+    }
+
+    button {
+        width: 116px;
+        height: 48px;
+        background-color: var(--vermelho);
+        border: none;
+        color: white;
+        border-radius: 10px;
+        margin-bottom: 32px;
+        cursor: pointer;
+    }
+
+    #direitos {
+        color: #98A2B3;
     }
 }
